# btc-rpc-proxy-startos

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  check-rpc.sh  config_rules.yaml  config_spec.yaml  docker_entrypoint.sh  manifest.yaml
assets/compat/: bitcoind_config_rules.yaml  config_rules.yaml  config_spec.yaml
configurator/: Cargo.toml
configurator/src/: main.rs
docs/: instructions.md  wallets.md
migrations/: from_0_3_2_2.sh  from_lt_0_3_2_2.sh  to_0_3_2_2.sh  to_lt_0_3_2_2.sh
scripts/: deps.ts  embassy.ts
scripts/procedures/: dependencies.ts  getConfig.ts  health.ts  main.ts  migrations.ts  setConfig.ts
scripts/services/: dependencies.ts  getConfig.ts  properties.ts
