[package]
name = "configurator"
version = "0.1.0"
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"

[[bin]]
name = "btc-rpc-proxy"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
bitcoin = { version = "0.26.0", features = ["use-serde"] }
bitcoin_hashes = { version = "0.9.4", features = ["serde"] }
btc-rpc-proxy = { path = "../btc-rpc-proxy", features = ["debug_logs"] }
http = "0.2.3"
hyper = "0.14.2"
linear-map = { version = "1.2.0", features = ["serde_impl"] }
serde = { version = "1.0.120", features = ["derive"] }
serde_yaml = "0.8.15"
slog = "2.7.0"
slog-async = "2.6.0"
slog-term = "2.6.0"
tokio = { version = "1.0.2", features = ["full"] }
